// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Loader/> should render correct Loader intents: danger 1`] = `
<div
  class="loader"
  data-lens-element="loader"
  data-lens-intent="danger"
  data-testid="my-testing-id"
  style="width: 20rem; height: 20rem;"
>
  <div
    class="loaderContent"
  >
    1
  </div>
  <svg
    display="block"
    height="var(--loader-width)"
    preserveAspectRatio="xMidYMid"
    style="margin: auto;"
    viewBox="0 0 100 100"
    width="var(--loader-width)"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M10 50a40 40 0 0080 0 40 42 0 01-80 0"
      fill="var(--lens-ui-intents-danger)"
    >
      <animatetransform
        attributeName="transform"
        dur="1s"
        keyTimes="0;1"
        repeatCount="indefinite"
        type="rotate"
        values="0 50 51;360 50 51"
      />
    </path>
  </svg>
</div>
`;

exports[`<Loader/> should render correct Loader intents: info 1`] = `
<div
  class="loader"
  data-lens-element="loader"
  data-lens-intent="info"
  data-testid="my-testing-id"
  style="width: 20rem; height: 20rem;"
>
  <div
    class="loaderContent"
  >
    1
  </div>
  <svg
    display="block"
    height="var(--loader-width)"
    preserveAspectRatio="xMidYMid"
    style="margin: auto;"
    viewBox="0 0 100 100"
    width="var(--loader-width)"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M10 50a40 40 0 0080 0 40 42 0 01-80 0"
      fill="var(--lens-ui-intents-info)"
    >
      <animatetransform
        attributeName="transform"
        dur="1s"
        keyTimes="0;1"
        repeatCount="indefinite"
        type="rotate"
        values="0 50 51;360 50 51"
      />
    </path>
  </svg>
</div>
`;

exports[`<Loader/> should render correct Loader intents: primary 1`] = `
<div
  class="loader"
  data-lens-element="loader"
  data-lens-intent="primary"
  data-testid="my-testing-id"
  style="width: 20rem; height: 20rem;"
>
  <div
    class="loaderContent"
  >
    1
  </div>
  <svg
    display="block"
    height="var(--loader-width)"
    preserveAspectRatio="xMidYMid"
    style="margin: auto;"
    viewBox="0 0 100 100"
    width="var(--loader-width)"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M10 50a40 40 0 0080 0 40 42 0 01-80 0"
      fill="var(--lens-ui-intents-primary)"
    >
      <animatetransform
        attributeName="transform"
        dur="1s"
        keyTimes="0;1"
        repeatCount="indefinite"
        type="rotate"
        values="0 50 51;360 50 51"
      />
    </path>
  </svg>
</div>
`;

exports[`<Loader/> should render correct Loader intents: secondary 1`] = `
<div
  class="loader"
  data-lens-element="loader"
  data-lens-intent="secondary"
  data-testid="my-testing-id"
  style="width: 20rem; height: 20rem;"
>
  <div
    class="loaderContent"
  >
    1
  </div>
  <svg
    display="block"
    height="var(--loader-width)"
    preserveAspectRatio="xMidYMid"
    style="margin: auto;"
    viewBox="0 0 100 100"
    width="var(--loader-width)"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M10 50a40 40 0 0080 0 40 42 0 01-80 0"
      fill="var(--lens-ui-intents-secondary)"
    >
      <animatetransform
        attributeName="transform"
        dur="1s"
        keyTimes="0;1"
        repeatCount="indefinite"
        type="rotate"
        values="0 50 51;360 50 51"
      />
    </path>
  </svg>
</div>
`;

exports[`<Loader/> should render correct Loader intents: success 1`] = `
<div
  class="loader"
  data-lens-element="loader"
  data-lens-intent="success"
  data-testid="my-testing-id"
  style="width: 20rem; height: 20rem;"
>
  <div
    class="loaderContent"
  >
    1
  </div>
  <svg
    display="block"
    height="var(--loader-width)"
    preserveAspectRatio="xMidYMid"
    style="margin: auto;"
    viewBox="0 0 100 100"
    width="var(--loader-width)"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M10 50a40 40 0 0080 0 40 42 0 01-80 0"
      fill="var(--lens-ui-intents-success)"
    >
      <animatetransform
        attributeName="transform"
        dur="1s"
        keyTimes="0;1"
        repeatCount="indefinite"
        type="rotate"
        values="0 50 51;360 50 51"
      />
    </path>
  </svg>
</div>
`;

exports[`<Loader/> should render correct Loader intents: warning 1`] = `
<div
  class="loader"
  data-lens-element="loader"
  data-lens-intent="warning"
  data-testid="my-testing-id"
  style="width: 20rem; height: 20rem;"
>
  <div
    class="loaderContent"
  >
    1
  </div>
  <svg
    display="block"
    height="var(--loader-width)"
    preserveAspectRatio="xMidYMid"
    style="margin: auto;"
    viewBox="0 0 100 100"
    width="var(--loader-width)"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M10 50a40 40 0 0080 0 40 42 0 01-80 0"
      fill="var(--lens-ui-intents-warning)"
    >
      <animatetransform
        attributeName="transform"
        dur="1s"
        keyTimes="0;1"
        repeatCount="indefinite"
        type="rotate"
        values="0 50 51;360 50 51"
      />
    </path>
  </svg>
</div>
`;

exports[`<Loader/> should render correct Loader types: eclipse 1`] = `
<div
  class="loader"
  data-lens-element="loader"
  data-lens-intent="primary"
  data-testid="my-testing-id"
  style="width: 5rem; height: 5rem;"
>
  <div
    class="loaderContent"
  >
    1
  </div>
  <svg
    display="block"
    height="var(--loader-width)"
    preserveAspectRatio="xMidYMid"
    style="margin: auto;"
    viewBox="0 0 100 100"
    width="var(--loader-width)"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M10 50a40 40 0 0080 0 40 42 0 01-80 0"
      fill="var(--lens-ui-intents-primary)"
    >
      <animatetransform
        attributeName="transform"
        dur="1s"
        keyTimes="0;1"
        repeatCount="indefinite"
        type="rotate"
        values="0 50 51;360 50 51"
      />
    </path>
  </svg>
</div>
`;

exports[`<Loader/> should render correct Loader types: oval 1`] = `
<div
  class="loader"
  data-lens-element="loader"
  data-lens-intent="primary"
  data-testid="my-testing-id"
  style="width: 5rem; height: 5rem;"
>
  <div
    class="loaderContent"
  >
    1
  </div>
  <svg
    height="var(--loader-width)"
    stroke="var(--lens-ui-intents-primary)"
    viewBox="-5.8 -5.8 50 50"
    width="var(--loader-width)"
    xmlns="http://www.w3.org/2000/svg"
  >
    <g
      fill="none"
      fill-rule="evenodd"
      stroke-width="2"
      transform="translate(1 1)"
    >
      <circle
        cx="18"
        cy="18"
        r="18"
        stroke-opacity="0.5"
      />
      <path
        d="M36 18c0-9.94-8.06-18-18-18"
      >
        <animatetransform
          attributeName="transform"
          dur="1s"
          from="0 18 18"
          repeatCount="indefinite"
          to="360 18 18"
          type="rotate"
        />
      </path>
    </g>
  </svg>
</div>
`;

exports[`<Loader/> should render correct Loader types: spinner 1`] = `
<div
  class="loader"
  data-lens-element="loader"
  data-lens-intent="primary"
  data-testid="my-testing-id"
  style="width: 5rem; height: 5rem;"
>
  <div
    class="loaderContent"
  >
    1
  </div>
  <svg
    display="block"
    height="var(--loader-width)"
    preserveAspectRatio="xMidYMid"
    style="margin: auto;"
    viewBox="20 20 60 60"
    width="var(--loader-width)"
    xmlns="http://www.w3.org/2000/svg"
  >
    <rect
      fill="var(--lens-ui-intents-primary)"
      height="12"
      rx="3"
      ry="6"
      width="6"
      x="47"
      y="24"
    >
      <animate
        attributeName="opacity"
        begin="-0.9166666666666666s"
        dur="1s"
        keyTimes="0;1"
        repeatCount="indefinite"
        values="1;0"
      />
    </rect>
    <rect
      fill="var(--lens-ui-intents-primary)"
      height="12"
      rx="3"
      ry="6"
      transform="rotate(30 50 50)"
      width="6"
      x="47"
      y="24"
    >
      <animate
        attributeName="opacity"
        begin="-0.8333333333333334s"
        dur="1s"
        keyTimes="0;1"
        repeatCount="indefinite"
        values="1;0"
      />
    </rect>
    <rect
      fill="var(--lens-ui-intents-primary)"
      height="12"
      rx="3"
      ry="6"
      transform="rotate(60 50 50)"
      width="6"
      x="47"
      y="24"
    >
      <animate
        attributeName="opacity"
        begin="-0.75s"
        dur="1s"
        keyTimes="0;1"
        repeatCount="indefinite"
        values="1;0"
      />
    </rect>
    <rect
      fill="var(--lens-ui-intents-primary)"
      height="12"
      rx="3"
      ry="6"
      transform="rotate(90 50 50)"
      width="6"
      x="47"
      y="24"
    >
      <animate
        attributeName="opacity"
        begin="-0.6666666666666666s"
        dur="1s"
        keyTimes="0;1"
        repeatCount="indefinite"
        values="1;0"
      />
    </rect>
    <rect
      fill="var(--lens-ui-intents-primary)"
      height="12"
      rx="3"
      ry="6"
      transform="rotate(120 50 50)"
      width="6"
      x="47"
      y="24"
    >
      <animate
        attributeName="opacity"
        begin="-0.5833333333333334s"
        dur="1s"
        keyTimes="0;1"
        repeatCount="indefinite"
        values="1;0"
      />
    </rect>
    <rect
      fill="var(--lens-ui-intents-primary)"
      height="12"
      rx="3"
      ry="6"
      transform="rotate(150 50 50)"
      width="6"
      x="47"
      y="24"
    >
      <animate
        attributeName="opacity"
        begin="-0.5s"
        dur="1s"
        keyTimes="0;1"
        repeatCount="indefinite"
        values="1;0"
      />
    </rect>
    <rect
      fill="var(--lens-ui-intents-primary)"
      height="12"
      rx="3"
      ry="6"
      transform="rotate(180 50 50)"
      width="6"
      x="47"
      y="24"
    >
      <animate
        attributeName="opacity"
        begin="-0.4166666666666667s"
        dur="1s"
        keyTimes="0;1"
        repeatCount="indefinite"
        values="1;0"
      />
    </rect>
    <rect
      fill="var(--lens-ui-intents-primary)"
      height="12"
      rx="3"
      ry="6"
      transform="rotate(210 50 50)"
      width="6"
      x="47"
      y="24"
    >
      <animate
        attributeName="opacity"
        begin="-0.3333333333333333s"
        dur="1s"
        keyTimes="0;1"
        repeatCount="indefinite"
        values="1;0"
      />
    </rect>
    <rect
      fill="var(--lens-ui-intents-primary)"
      height="12"
      rx="3"
      ry="6"
      transform="rotate(240 50 50)"
      width="6"
      x="47"
      y="24"
    >
      <animate
        attributeName="opacity"
        begin="-0.25s"
        dur="1s"
        keyTimes="0;1"
        repeatCount="indefinite"
        values="1;0"
      />
    </rect>
    <rect
      fill="var(--lens-ui-intents-primary)"
      height="12"
      rx="3"
      ry="6"
      transform="rotate(270 50 50)"
      width="6"
      x="47"
      y="24"
    >
      <animate
        attributeName="opacity"
        begin="-0.16666666666666666s"
        dur="1s"
        keyTimes="0;1"
        repeatCount="indefinite"
        values="1;0"
      />
    </rect>
    <rect
      fill="var(--lens-ui-intents-primary)"
      height="12"
      rx="3"
      ry="6"
      transform="rotate(300 50 50)"
      width="6"
      x="47"
      y="24"
    >
      <animate
        attributeName="opacity"
        begin="-0.08333333333333333s"
        dur="1s"
        keyTimes="0;1"
        repeatCount="indefinite"
        values="1;0"
      />
    </rect>
    <rect
      fill="var(--lens-ui-intents-primary)"
      height="12"
      rx="3"
      ry="6"
      transform="rotate(330 50 50)"
      width="6"
      x="47"
      y="24"
    >
      <animate
        attributeName="opacity"
        begin="0s"
        dur="1s"
        keyTimes="0;1"
        repeatCount="indefinite"
        values="1;0"
      />
    </rect>
  </svg>
</div>
`;
